# tsam_xarray

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .release-please-config.json  CHANGELOG.md  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  dependabot-auto-merge.yaml  pr-title.yaml  publish.yaml  release.yaml
docs/: api.md  gen_ref_pages.py  index.md
docs/examples/: clustering-io.ipynb  clustering.json  getting-started.ipynb  multi-dim.ipynb  segmentation.ipynb  slice-dims.ipynb  stack-dims.ipynb  tuning.ipynb
docs/stylesheets/: extra.css
scripts/: benchmark_parallel.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/api/SUMMARY/: index.html
site/changelog/: index.html
site/examples/accuracy/: accuracy.ipynb  index.html
site/examples/getting-started/: getting-started.ipynb  index.html
site/examples/slice-dims/: index.html
site/examples/stack-dims/: index.html
site/examples/weights/: index.html
site/search/: search_index.json
src/tsam_xarray/: __init__.py  _clustering.py  _core.py  _result.py  _sample_data.py  _tuning.py  _version.py
test/: conftest.py  test_aggregate.py  test_parametrized.py  test_placeholder.py  test_tuning.py
