[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tsam_xarray"
dynamic = ["version"]
description = "Lightweight xarray wrapper for tsam time series aggregation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "notebook>=7.5.5",
    "tsam>=3.2.0",
    "xarray>=2024.1",
]

[dependency-groups]
docs = [
    "mkdocs-material>=9",
    "mkdocs-jupyter>=0.25",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
    "mkdocstrings[python]>=0.27",
    "ipykernel>=6",
    "xarray-plotly>=0.0.14",
    "mkdocs-plotly-plugin>=0.1",
]
dev = [
    {include-group = "docs"},
    "pytest>=8",
    "pytest-cov>=6",
    "mypy>=1",
    "pandas-stubs",
    "ruff>=0.11",
    "pre-commit>=4",
    "nbstripout>=0.7",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/tsam_xarray/_version.py"

[tool.ruff]
src = ["src"]
exclude = ["src/tsam_xarray/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["tsam.*", "xarray.*", "numpy.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["tsam_xarray"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
testpaths = ["test"]
